Исправляет дивы и добавляет анимации на гл страницу

--- a/index.html
+++ b/index.html
@@ -567,8 +567,10 @@
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="modal-btn-close" data-modal-close>X</button>
+      <div class="modal-window">
+        <div class="modal">
+          <button class="modal-btn-close" data-modal-close>X</button>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
