--- a/portfolio.html
+++ b/portfolio.html
@@ -78,21 +78,22 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img1.jpg"
-                  alt="Ноутбук с сайтом"
-                  width="370"
-                />
-                <div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img1.jpg"
+                    alt="Ноутбук с сайтом"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -101,18 +102,17 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img2.jpg"
-                  alt="Игра в баскетбол"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Наши менторы самые лучшие!
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img2.jpg"
+                    alt="Игра в баскетбол"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>Наши менторы самые лучшие!</p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -123,18 +123,21 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img3.jpg"
-                  alt="Логотип ресторана"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Спасибо вам огромное, за вашу работу, за огромное количество проверенных работ. За вашу конструктивную обратную связь!
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img3.jpg"
+                    alt="Логотип ресторана"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Спасибо вам огромное, за вашу работу, за огромное
+                      количество проверенных работ. За вашу конструктивную
+                      обратную связь!
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -143,20 +146,22 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img4.jpg"
-                  alt="Наушники"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img4.jpg"
+                    alt="Наушники"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -165,20 +170,22 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img5.jpg"
-                  alt="Коробки"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img5.jpg"
+                    alt="Коробки"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -187,20 +194,22 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img6.jpg"
-                  alt="Монитор с сайтом"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img6.jpg"
+                    alt="Монитор с сайтом"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -209,20 +218,22 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img7.jpg"
-                  alt="Книга"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img7.jpg"
+                    alt="Книга"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -231,20 +242,22 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img8.jpg"
-                  alt="Этикетка"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img8.jpg"
+                    alt="Этикетка"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -253,20 +266,22 @@
             </li>
 
             <li class="portfolio-element">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/img9.jpg"
-                  alt="Ноутбук"
-                  width="370"
-                /><div class="portfolio-overlay">
-                  <p>
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+              <a href="" class="portfolio-link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/img9.jpg"
+                    alt="Ноутбук"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="text-container">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Приложение</p>
