--- a/portfolio.html
+++ b/portfolio.html
@@ -383,6 +383,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-place">
+          <p class="footer-socials-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+          <form action="" class="footer-form">
+            <input
+              type="email"
+              name="user-email"
+              class="footer-form-field"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="subscribe-button">
+              Подписаться
+              <svg class="subscribe-button-icon" width="24px" height="24px">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
