--- a/portfolio.html
+++ b/portfolio.html
@@ -17,24 +17,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header-page">
+    <header class="header">
       <div class="container header-container">
         <a href="./index.html" class="logo"
-          ><span class="logo-item">Web</span>Studio</a
+          ><span class="logo__item">Web</span>Studio</a
         >
         <nav class="navigation">
           <ul class="menu list">
-            <li class="menu-item">
+            <li class="menu__item">
               <a href="./index.html" class="link">Студия</a>
             </li>
-            <li class="menu-item">
+            <li class="menu__item">
               <a href="./portfolio.html" class="link is-active">Портфолио</a>
             </li>
-            <li class="menu-item"><a href="" class="link">Контакты</a></li>
+            <li class="menu__item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="menu list">
-          <li class="menu-item">
+          <li class="menu__item">
             <a href="mailto:info@devstudio.com" class="contact-list">
               <svg class="adress-icon" width="16px" height="12px">
                 <use href="./images/sprite.svg#icon-envelope"></use>
@@ -42,7 +42,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="menu-item">
+          <li class="menu__item">
             <a href="tel:+380961111111" class="contact-list"
               ><svg class="adress-icon" width="10px" height="16px">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
@@ -296,12 +296,12 @@
       <div class="container footer-container">
         <div>
           <a href="./index.html" class="footer-logo"
-            ><span class="logo-item">Web</span>Studio</a
+            ><span class="logo__item">Web</span>Studio</a
           >
           <address class="address">
             <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
-              <li class="footer-list-item">
+              <li class="footer-list__item">
                 <a href="mailto:info@devstudio.com" class="footer-contacts"
                   >info@devstudio.com</a
                 >
